start build styles of active tasks and fix overflow project and task title bug

--- a/src/sass/_active-tasks.scss
+++ b/src/sass/_active-tasks.scss
@@ -1,4 +1,55 @@
 .active-tasks {
-    width: 65%;
+    width: 75%;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+
+
+    &__title {
+        width: 100%;
+        text-align: center;
+        font-size: 2.5rem;
+        letter-spacing: 1px;
+        margin: 10px 0;
+    }
+
+    &__tasks {
+        width: 100%;
+        min-height: 40%;
+        flex-grow: 1;
+    }
+
+    &__buttons {
+        width: 100%;
+        height: 10%;
+        display: flex;
+        justify-content: space-evenly;
+        padding: 5px;
+    }
+
+    &__summary {
+        width: 100%;
+        height: 15%;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    &__statistics {
+        height: 80%;
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        font-size: 2rem;
+        padding: 0 15px;
+    }
+}
+
+button {
+    width: calc(50% - 10px);
+    margin: 0;
+    border: none;
+    font-size: 2rem;
+    font-family: $font-family;
+    padding: 5px;
 }
